# aiviz

./: .gitignore  DEPLOYMENT.md  README.md  app.py  pyproject.toml  requirements.txt
app/: pyproject.toml  requirements.txt
data/: confusion_matrix_test_cases.json  data_pipeline_flow_sample.json  data_pipeline_flow_test_cases.json  dataset_composition_sample.json  dataset_composition_test_cases.json  decision_tree_sample.json  decision_tree_test_cases.json  domain_taxonomy_sample.json  domain_taxonomy_test_cases.json  error_dropout_sample.json  error_dropout_test_cases.json  feature_extraction_sample.json  feature_extraction_test_cases.json  graph_clustering_test_cases.json  hierarchical_clustering_sample.json  hierarchical_clustering_test_cases.json  model_architecture_sample.json  model_architecture_test_cases.json  model_input_output_sample.json  model_input_output_test_cases.json  nested_feature_categories_sample.json  nested_feature_categories_test_cases.json  neural_network_topology_sample.json  node_influence_test_cases.json  pairwise_similarity_sample.json  pairwise_similarity_test_cases.json  resource_consumption_sample.json  resource_consumption_test_cases.json
docs/: ripgrip-text.md  ripgrip.code.md
pages/: 0_Home.py  10_Graph_Clustering.py  12_Neural_Network_Topology.py  16_Resource_Consumption.py  17_Error_Dropout_Tracking.py  18_Decision_Tree_Breakdown.py  19_Hierarchical_Clustering.py  1_hyperparameter_impact.py  20_Nested_Feature_Categories.py  23_Dataset_Composition.py  2_Dataset_Variations.py  2_dataset_variations.py  3_correlation_matrix.py  (+22 more)
(+52 files in other folders)
